[♻️Refactor]: 디테일 페이지 1차 리팩토링 (#147)
* [🐛Fix]: main의 index페이지 복구

- 사라졌던 main의 index 페이지 복구 및 데이터 바인딩

* [♻️Refactor]: 디테일 페이지 JS 리팩토링

- 1차 리팩토링 했습니다.
  추가로 진행될 예정

* [♻️Refactor]: 할인율 수정

- 할인율 0% 일때는 안나타나게 수정

* [♻️Refactor]: public 경로 수정

- /public/ 적혀있던 경로 수정

* [🐛Fix]: 아코디언 flex_column 관련 수정

- 리팩토링 및 약간의 코드 수정

* [🎨Modify]: data-secret 위치 변경

data-secret 위치를 button에서 h2로 이동

* [🐛Fix]: 장바구니쪽 충돌

- 장바구니 쪽 충돌난 거 확인 후 수정
  (맞는 지 확인부탁드립니다)

--- a/src/pages/cart/index.html
+++ b/src/pages/cart/index.html
@@ -64,12 +64,12 @@
                 <label
                   for="itemAllSelect"
                   class="item_all_select checkbox_before_label"
-                  >전체선택 
+                  >전체선택
                   <span class="check_number">
                     (
-                      <span class="checked_count">0</span>
-                      /
-                      <span class="all_check_count">0</span>
+                    <span class="checked_count">0</span>
+                    /
+                    <span class="all_check_count">0</span>
                     )
                   </span>
                 </label>
@@ -132,9 +132,7 @@
                           <span class="sr-only">목록 선택</span>
                         </label>
                       </fieldset>
-                      <a href="#"
-                      class="mr-5"
-                          >
+                      <a href="#" class="mr-5">
                         <img
                           src="https://via.placeholder.com/60x78"
                           alt="풀무원 탱탱쫄면 (4개입)"
@@ -200,9 +198,7 @@
                           <span class="sr-only">목록 선택</span>
                         </label>
                       </fieldset>
-                      <a href="#"
-                      class="mr-5"
-                          >
+                      <a href="#" class="mr-5">
                         <img
                           src="https://via.placeholder.com/60x78"
                           alt="풀무원 탱탱쫄면 (4개입)"
@@ -300,9 +296,7 @@
                           <span class="sr-only">목록 선택</span>
                         </label>
                       </fieldset>
-                      <a href="#"
-                      class="mr-5"
-                          >
+                      <a href="#" class="mr-5">
                         <img
                           src="https://via.placeholder.com/60x78"
                           alt="풀무원 탱탱쫄면 (4개입)"
@@ -400,9 +394,7 @@
                           <span class="sr-only">목록 선택</span>
                         </label>
                       </fieldset>
-                      <a href="#"
-                      class="mr-5"
-                          >
+                      <a href="#" class="mr-5">
                         <img
                           src="https://via.placeholder.com/60x78"
                           alt="풀무원 탱탱쫄면 (4개입)"
@@ -469,12 +461,12 @@
                 <label
                   for="itemAllSelect2"
                   class="item_all_select checkbox_before_label"
-                  >전체선택 
+                  >전체선택
                   <span class="check_number">
                     (
-                      <span class="checked_count">0</span>
-                      /
-                      <span class="all_check_count">0</span>
+                    <span class="checked_count">0</span>
+                    /
+                    <span class="all_check_count">0</span>
                     )
                   </span>
                 </label>
@@ -525,7 +517,9 @@
           <!-- cart_side_area -->
           <!-- member -->
           <aside class="cart_side_area w-284pxr pt-14">
-            <div class="sticky z-[-1] flex flex-col gap-4 cart_side top-[-60px]">
+            <div
+              class="sticky z-[-1] flex flex-col gap-4 cart_side top-[-60px]"
+            >
               <section class="border border-gray-100 border-solid">
                 <h3 class="sr-only">결제 정보</h3>
                 <article class="pb-5 delivery_info pt-23pxr px-19pxr">
