[🎨Modify]: addCart.js 증감 버튼 적용, cart.js 토글버튼 이미지기능
addCart.js
- 증감 버튼 적용
cart.js
- 토글버튼 이미지 변경기능

--- a/src/pages/cart/index.html
+++ b/src/pages/cart/index.html
@@ -41,7 +41,7 @@
   </head>
   <body>
     <header id="header"></header>
-    <!-- <div id="addCart"></div> -->
+    <div id="addCart"></div>
     <!-- cart page -->
     <main class="cart_page">
       <section class="cart w1050 pb-80pxr">
