[🐛Fix]: 문의쪽 아코디언 작동
- 데이터 넣고나서 작동안되던 아코디언 작동시키기

--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -598,7 +598,7 @@
 
           <!-- 페이지네이션 -->
           <div class="flex items-start gap-4 mx-auto">
-            <button class="w-14 h-14 icon_box_gray" data-arrow="">
+            <button class="w-14 h-14 icon_box_gray" disabled>
               <svg
                 class="text-gray-100 cursor-pointer"
                 width="36"
@@ -610,9 +610,9 @@
               </svg>
               <span class="sr-only">이전 페이지</span>
             </button>
-            <button class="w-14 h-14 icon_box_gray" data-arrow="">
+            <button class="w-14 h-14 icon_box_gray" disabled>
               <svg
-                class="text-gray-500 cursor-pointer"
+                class="text-gray-100 cursor-pointer"
                 width="36"
                 height="36"
                 viewBox="0 0 18 18"
@@ -735,7 +735,7 @@
 
             <div class="inquiry_list">
               <!-- 유저글 -->
-              <!-- <div>
+              <!-- <div class>
                 <h2
                   class="inquiry_title"
                   aria-expanded="false"
@@ -860,7 +860,7 @@
 
           <!-- 버튼 -->
           <div class="flex items-start gap-4 mx-auto">
-            <button class="w-14 h-14 icon_box_gray" data-arrow="">
+            <button class="w-14 h-14 icon_box_gray" disabled>
               <svg
                 class="text-gray-100 cursor-pointer"
                 width="36"
@@ -872,9 +872,9 @@
               </svg>
               <span class="sr-only">이전 페이지</span>
             </button>
-            <button class="w-14 h-14 icon_box_gray" data-arrow="">
+            <button class="w-14 h-14 icon_box_gray" disabled>
               <svg
-                class="text-gray-500 cursor-pointer"
+                class="text-gray-100 cursor-pointer"
                 width="36"
                 height="36"
                 viewBox="0 0 18 18"
