[✨Feat]: 회원가입 페이지 데이터 수송신, 이벤트 핸들러
- fetch로 GET,POST 데이터 가져와 중복 체크
- 입력 값 객체로 값 POST
- 유효성 검사와 데이터 할당하는 재사용 함수 사용

--- a/src/pages/register/index.html
+++ b/src/pages/register/index.html
@@ -97,7 +97,7 @@
                         required
                       />
                       <div id="password_error" class="hidden">
-                        특수문자 포함 최소 6자 - 16자 조합
+                        영어,숫자,특수문자 포함 최소 6자 - 16자 조합
                       </div>
                     </div>
                   </li>
@@ -146,7 +146,7 @@
                     >
                     <div>
                       <input
-                        type="number"
+                        type="text"
                         id="phone"
                         class="input_style"
                         placeholder="숫자만 입력해주세요."
@@ -231,7 +231,6 @@
                       name="dateInput"
                       class="text-center input_style"
                       pattern="\d{4}-\d{2}-\d{2}"
-                      required
                     />
                   </li>
                   <!-- 추가입력 사항 -->
