[📑Docs] : 일부 코드 리팩토링 및 프로덕트 리스트 카테고리까지 완료.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
         <!-- If we need pagination -->
         <div
-          class="flex justify-center items-center z-10 rounded-full font-normal absolute bottom-25pxr w-55pxr h-23pxr text-white bg-black/15 left-[70%] swiper-pagination text-16pxr"
+          class="text-white swiper-pagination w-55pxr h-23pxr bg-black/15 flex justify-center items-center z-10 rounded-full font-normal absolute bottom-25pxr left-[70%] text-16pxr"
         ></div>
 
         <!-- If we need navigation buttons -->
